--- a/module4/resume.html
+++ b/module4/resume.html
@@ -19,9 +19,9 @@
 		</div>
 	</div>
 	<div class="jobs">
-		<H1>MY EXPERINCE</H1>
+		<h2>MY EXPERINCE</h2>
 		<div class="job">
-			<h2>CTO at The Knowledge House</h2>
+			<h3>CTO at The Knowledge House</h3>
 			<p class="date">2014-Present</p>
 			<p class="desc">Along with my co-founder I help develop and implement a curriculum of digital learning, entrepreneurship, and advanced technical career skills for young adults from underserved communities in NYC.</p>
 			<ul class="duties">
@@ -33,7 +33,7 @@
 			</ul>
 		</div>
 		<div class="job">
-			<h2>Director Of Product at CoC.org</h2>
+			<h3>Director Of Product at CoC.org</h3>
 			<p class="date">2015-2017</p>
 			<p class="desc">Managed all technology development, platform upgrades and new product development for all technologies associated with the ColorOfChange advocacy platform</p>
 			<ul class="duties">
@@ -46,7 +46,7 @@
 		</div>
 	</div>
 	<div class="education">
-		<h1>CUNY BARUCH</h1>
+		<h2>CUNY BARUCH</h2>
 		<p>Majored in Business Admin</p>
 	</div>
 
